--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Stethoscope",
-  "version": "2.1.3",
+  "version": "2.1.5",
   "private": true,
   "homepage": "./",
   "author": "Netflix",
@@ -11,7 +11,7 @@
       {
         "provider": "github",
         "publishAutoUpdate": true,
-        "releaseType": "draft"
+        "releaseType": "release"
       }
     ],
     "appId": "com.netflix.stethoscope-local",
@@ -126,7 +126,7 @@
     "cross-env": "^5.2.0",
     "dmg-builder": "^6.5.3",
     "electron-settings": "^3.1.4",
-    "electron-updater": "3.0.3",
+    "electron-updater": "^4.0.0",
     "es6-promisify": "^6.0.0",
     "express": "^4.16.2",
     "generic-pool": "^3.4.2",
