Add ability to send to splunk

--- a/src/config.json
+++ b/src/config.json
@@ -9,5 +9,8 @@
     }]
   },
   "rescanIntervalSeconds": 604800, 
-  "autoLaunchPrompt": true
+  "autoLaunchPrompt": true,
+  "postToSplunk": true,
+  "splunkUrl": "https://splunkURL",
+  "splunkToken": "THETOKEN"
 }
